Záložky bez responsive a bez EN

--- a/_includes/moje-sablona.njk
+++ b/_includes/moje-sablona.njk
@@ -36,7 +36,7 @@
             <li class="menu__item"><a class="menu__link" href="/">Úvod</a></li>
             <li class="menu__item"><a class="menu__link" href="/sluzby/">Služby</a></li>
             <li class="menu__item"><a class="menu__link" href="/cenik/">Ceník</a></li>
-            <li class="menu__item"><a class="menu__link" href="/onas/">O nás</a></li>
+            <li class="menu__item"><a class="menu__link" href="/omne/">O mně</a></li>
             <li class="menu__item"><a class="menu__link" href="/kontakt/">Kontakt</a></li>
           </ul>
 
@@ -63,7 +63,7 @@
                   </p>
 
                   <p class="footer__title">E-mail:<br>
-                  <a href="mailto:000000000000000000000">penzion@uvodyyyyyyyyyyyyyyyyyyyyyyyy.cz</a>
+                  <a href="mailto:jaroslavad26@gmail.com">jaroslavad26@gmail.com</a>
                   </p>
                       
               </div>
