--- a/_includes/moje-sablona_CZ.njk
+++ b/_includes/moje-sablona_CZ.njk
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css/">
+    <link rel="stylesheet" href="/css/glide.core.min.css/">
+    <link rel="stylesheet" href="/css/glide.theme.min.css/">
   </head>
 
   <body>
@@ -17,8 +19,8 @@
 
       <header class="header">
         <div class="header__language">
-          <a href="">EN</a>
-          <a href="">CZ</a>
+          <a href="/index_en/">EN</a>
+          <a href="/">CZ</a>
         </div>
 
     <div class="header__inner">
@@ -47,7 +49,7 @@
       <div class="header__image"></div>
 
 
-    {{content | safe}}
+      {{content | safe}}
 
     
 
@@ -84,6 +86,17 @@
 
 
   
+    <script src="glide.min.js"></script>
+    
+    <script>
+      new Glide('.glide', {
+        autoplay: 2000,
+        hoverpause: false,
+        perView: 3,
+        type: 'carousel'
+      }).mount()
+    </script>
+
   </body>
 </html>
 
