--- a/_includes/moje-sablona_EN.njk
+++ b/_includes/moje-sablona_EN.njk
@@ -19,7 +19,7 @@
 
       <header class="header">
         <div class="header__language">
-          <a href="/index_en/">EN</a>
+          <a href="/EN/index_en/">EN</a>
           <a href="/">CZ</a>
         </div>
 
@@ -36,10 +36,10 @@
 
           <ul class="menu__list">
             <li class="menu__item"><a class="menu__link" href="/index_en/">Home</a></li>
-            <li class="menu__item"><a class="menu__link" href="/services/">Services</a></li>
-            <li class="menu__item"><a class="menu__link" href="/prices/">Prices</a></li>
-            <li class="menu__item"><a class="menu__link" href="/aboutme/">About me</a></li>
-            <li class="menu__item"><a class="menu__link" href="/contact/">Contact</a></li>
+            <li class="menu__item"><a class="menu__link" href="/EN/services/">Services</a></li>
+            <li class="menu__item"><a class="menu__link" href="/EN/prices/">Prices</a></li>
+            <li class="menu__item"><a class="menu__link" href="/EN/aboutme/">About me</a></li>
+            <li class="menu__item"><a class="menu__link" href="/EN/contact/">Contact</a></li>
           </ul>
 
         </nav>
