Rozchozen glide, netlify, EN verze

--- a/_includes/moje-sablona_EN.njk
+++ b/_includes/moje-sablona_EN.njk
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css/">
-    <link rel="stylesheet" href="/css/glide.core.min.css/">
-    <link rel="stylesheet" href="/css/glide.theme.min.css/">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/glide.core.min.css">
+    <link rel="stylesheet" href="/css/glide.theme.min.css">
   </head>
 
   <body>
@@ -86,11 +86,11 @@
 
 
   
-    <script src="glide.min.js"></script>
+    <script src="/js/glide.min.js"></script>
     
     <script>
       new Glide('.glide', {
-        autoplay: 2000,
+        autoplay: 10000,
         hoverpause: false,
         perView: 3,
         type: 'carousel'
