--- a/_includes/moje-sablona_EN.njk
+++ b/_includes/moje-sablona_EN.njk
@@ -35,7 +35,7 @@
           <label for="menu-checkbox" class="menu__toggler">☰</label>
 
           <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="/index_en/">Home</a></li>
+            <li class="menu__item"><a class="menu__link" href="/EN/index_en/">Home</a></li>
             <li class="menu__item"><a class="menu__link" href="/EN/services/">Services</a></li>
             <li class="menu__item"><a class="menu__link" href="/EN/prices/">Prices</a></li>
             <li class="menu__item"><a class="menu__link" href="/EN/aboutme/">About me</a></li>
