--- a/_includes/moje-sablona_EN.njk
+++ b/_includes/moje-sablona_EN.njk
@@ -23,30 +23,33 @@
           <a href="/">CZ</a>
         </div>
 
-    <div class="header__inner">
-                <div class="header__left">
-                    <div class="header__logo">St Raphael Revive</div>
-    </div>
+          <div class="header__inner">
+                      <div class="header__left">
+                          <div class="header__logo">St Raphael Revive</div>
+          </div>
 
 
-        <nav class="menu">
+              <nav class="menu">
 
-          <input type="checkbox" class="menu__checkbox" id="menu-checkbox">
-          <label for="menu-checkbox" class="menu__toggler">☰</label>
+                <input type="checkbox" class="menu__checkbox" id="menu-checkbox">
+                <label for="menu-checkbox" class="menu__toggler">☰</label>
 
-          <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="/EN/index_en/">Home</a></li>
-            <li class="menu__item"><a class="menu__link" href="/EN/services/">Services</a></li>
-            <li class="menu__item"><a class="menu__link" href="/EN/prices/">Prices</a></li>
-            <li class="menu__item"><a class="menu__link" href="/EN/aboutme/">About me</a></li>
-            <li class="menu__item"><a class="menu__link" href="/EN/contact/">Contact</a></li>
-          </ul>
+                <ul class="menu__list">
+                  <li class="menu__item"><a class="menu__link" href="/EN/index_en/">Home</a></li>
+                  <li class="menu__item"><a class="menu__link" href="/EN/services/">Services</a></li>
+                  <li class="menu__item"><a class="menu__link" href="/EN/prices/">Prices</a></li>
+                  <li class="menu__item"><a class="menu__link" href="/EN/aboutme/">About me</a></li>
+                  <li class="menu__item"><a class="menu__link" href="/EN/contact/">Contact</a></li>
+                </ul>
 
-        </nav>
+              </nav>
 
-      </div>
+            </div>
 
-      <div class="header__image"></div>
+            <div class="header__image"></div>
+
+          </header>
+
 
 
       {{content | safe}}
