--- a/_includes/moje-sablona_EN.njk
+++ b/_includes/moje-sablona_EN.njk
@@ -76,13 +76,33 @@
               <div class="footer__grid-column">
                   <h2>Visit us</h2>
 
-                  <a href="https://www.facebook.com/jaroslava.drobna.3"><img class="footer__image" src="/images/logos/facebook-icon.png" alt="Ikona Facebook"></a>
+                  <a href="https://www.facebook.com/jaroslava.drobna.3"
+      ><img
+        class="footer__image"
+        src="/Images/Logos/facebook-icon.png"
+        alt="Ikona Facebook"
+    /></a>
 
-                  <a href="https://www.fht.org.uk/users/drobna149837"><img class="footer__image" src="/images/logos/fht_logo.png" alt="Ikona FHT"></a>
-                    
-                  <a href="https://instagram.com/straphaelrevive?igshid=OGQ5ZDc2ODk2ZA=="><img class="footer__image" src="/images/logos/instagram-icon.png" alt="Ikona Instagramu"></a>
+    <a href="https://www.fht.org.uk/users/drobna149837"
+      ><img
+        class="footer__image"
+        src="/images/logos/fht_logo.png"
+        alt="Ikona FHT"
+    /></a>
 
-                  <a href="https://uk.linkedin.com/in/jaroslava-drobna-9b357133"><img class="footer__image" src="/images/logos/linkedin-icon-2-logo-svgrepo-com.svg" alt="Ikona LinkedIn"></a>
+    <a href="https://instagram.com/straphaelrevive?igshid=OGQ5ZDc2ODk2ZA=="
+      ><img
+        class="footer__image"
+        src="/Images/Logos/instagram-icon.png"
+        alt="Ikona Instagramu"
+    /></a>
+
+    <a href="https://uk.linkedin.com/in/jaroslava-drobna-9b357133"
+      ><img
+        class="footer__image"
+        src="/images/logos/linkedin-icon-2-logo-svgrepo-com.svg"
+        alt="Ikona LinkedIn"
+    /></a>
               </div>
 
           </div>
